--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,3 +2,24 @@
 .topic-button {
     margin: 1px 5px;
 }
+
+.caption {
+    text-align: center;
+    margin: 0;
+    padding: 1px 5px;
+}
+
+.thumbnail-wrapper {
+    padding: 0;
+    margin: 0;
+}
+
+.thumbnail {
+    padding: 0;
+    margin: 0;
+}
+
+.thumbnail * {
+    margin: 0;
+    padding: 0;
+}
